--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-20.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-20.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  IBD Stock Of The Day HubSpot Builds AI Marketing Platform
+  IBD Stock Of The Day HubSpot Builds AI Marketing Platform	IBD 今日股票 HubSpot 构建 AI 营销平台
 image: /assets/img/stock-of-the-day/2024-11-20.jpg
 date: 2024-11-20 17:32 -0800
 author: REINHARDT KRAUSE
@@ -12,106 +12,133 @@ author: REINHARDT KRAUSE
 
 
 
-**HubSpot** ([HUBS](https://research.investors.com/quote.aspx?symbol=HUBS)) is the [IBD Stock of the Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the marketing software maker continues to make acquisitions to add artificial intelligence, sales automation and customer data management capabilities to its platform. HubSpot stock has climbed 19% in 2024.
+**HubSpot** ([HUBS](https://research.investors.com/quote.aspx?symbol=HUBS)) is the [IBD Stock of the Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the marketing software maker continues to make acquisitions to add artificial intelligence, sales automation and customer data management capabilities to its platform. HubSpot stock has climbed 19% in 2024.  
+**HubSpot** （[HUBS](https://research.investors.com/quote.aspx?symbol=HUBS)） 是[当今的 IBD 股票](https://www.investors.com/research/ibd-stock-of-the-day/)，因为这家营销软件制造商继续进行收购，以在其平台中添加人工智能、销售自动化和客户数据管理功能。HubSpot 股票在 19 年上涨了 2024%。
 
 
-On the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/?), HubSpot stock climbed 1.8% to close at 694.48.
+On the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/?), HubSpot stock climbed 1.8% to close at 694.48.  
+[在今天的股市](https://www.investors.com/news/stock-market-today-stock-market-news/?)上，HubSpot 股票上涨 1.8%，收于 694.48。
 
 
-Cambridge, Mass.-based HubSpot sells sales and marketing software to small and midsize businesses. It focuses on digital channels such as blogs, internet search engines and social media.
+Cambridge, Mass.-based HubSpot sells sales and marketing software to small and midsize businesses. It focuses on digital channels such as blogs, internet search engines and social media.  
+总部位于马萨诸塞州剑桥市的 HubSpot 向中小型企业销售销售和营销软件。它专注于博客、互联网搜索引擎和社交媒体等数字渠道。
 
 
 
 
-HubSpot Stock Entry Point
--------------------------
+HubSpot Stock Entry PointHubSpot 股票入场点
+--------------------------------------
 
 
-From a technical view, HubSpot stock holds a 693.85 entry point from a deep cup base. Alternatively, investors could use 724.61 — the 52-week high set on Nov. 13 — as a high-handle add-on entry.
+From a technical view, HubSpot stock holds a 693.85 entry point from a deep cup base. Alternatively, investors could use 724.61 — the 52-week high set on Nov. 13 — as a high-handle add-on entry.  
+从技术角度来看，HubSpot 股票从深杯底部持有 693.85 的入场点。或者，投资者可以使用 724.61（11 月 13 日创下的 52 周高点）作为高手柄附加入场。
 
 
-HubSpot aims to attract people to customer websites and optimize content so that visitors are converted into paying customers. In the high end of the market, HubSpot competes against **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and **Adobe Systems** ([ADBE](https://research.investors.com/quote.aspx?symbol=ADBE)).
+HubSpot aims to attract people to customer websites and optimize content so that visitors are converted into paying customers. In the high end of the market, HubSpot competes against **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and **Adobe Systems** ([ADBE](https://research.investors.com/quote.aspx?symbol=ADBE)).  
+HubSpot 旨在吸引人们访问客户网站并优化内容，以便将访问者转化为付费客户。在高端市场，HubSpot 与 **Salesforce** （[CRM）](https://research.investors.com/quote.aspx?symbol=CRM) 和 **Adob e Systems** （[ADBE）](https://research.investors.com/quote.aspx?symbol=ADBE) 竞争。
 
 
-At its Inbound customer conference in September, HubSpot unveiled "Breeze," its new AI engine powering copilots and agents. Many software companies are [shifting to AI agents](https://www.investors.com/news/technology/nvidia-stock-ai-agents-software-companies/).
+At its Inbound customer conference in September, HubSpot unveiled "Breeze," its new AI engine powering copilots and agents. Many software companies are [shifting to AI agents](https://www.investors.com/news/technology/nvidia-stock-ai-agents-software-companies/).  
+在 9 月份的 Inbound 客户会议上，HubSpot 推出了“Breeze”，这是其为 Copilot 和座席提供支持的新 AI 引擎。许多软件公司正在[转向 AI 代理](https://www.investors.com/news/technology/nvidia-stock-ai-agents-software-companies/)。
 
 
-Also, Breeze Agents offer end-to-end task automation. Other Breeze AI features include customer engagement scoring, AI-assisted reporting and automation, data entry suggestions and translation for email.
+Also, Breeze Agents offer end-to-end task automation. Other Breeze AI features include customer engagement scoring, AI-assisted reporting and automation, data entry suggestions and translation for email.  
+此外，Breeze Agents 还提供端到端的任务自动化。Breeze AI 的其他功能包括客户参与评分、AI 辅助报告和自动化、数据输入建议和电子邮件翻译。
 
 
-AI Monetization In Flux
------------------------
+AI Monetization In Flux 不断变化的 AI 货币化
+------------------------------------
 
 
-However, HubSpot is still mulling how to price new AI products.
+However, HubSpot is still mulling how to price new AI products.  
+然而，HubSpot 仍在考虑如何为新的 AI 产品定价。
 
 
-"I'll say, one quick thing about the pricing question," said Chief Executive Yamini Rangan on the company's third-quarter conference call with analysts. "We will stay very, very consistent with our pricing philosophy. We are very, very focused on driving value, and we'll continue to do that."
+"I'll say, one quick thing about the pricing question," said Chief Executive Yamini Rangan on the company's third-quarter conference call with analysts. "We will stay very, very consistent with our pricing philosophy. We are very, very focused on driving value, and we'll continue to do that."  
+“我想说，关于定价问题，有一件简单的事情，”首席执行官 Yamini Rangan 在公司第三季度与分析师的电话会议上表示。“我们将非常非常一致地保持我们的定价理念。我们非常非常专注于推动价值，我们将继续这样做。
 
 
-He added: "In terms of agents, when agents begin to deliver consistent value, we'll likely have different (monetization) for agents, whether it is credit or tokens or something that is consumption-based. But right now, we're really focused on delivering value."
+He added: "In terms of agents, when agents begin to deliver consistent value, we'll likely have different (monetization) for agents, whether it is credit or tokens or something that is consumption-based. But right now, we're really focused on delivering value."  
+他补充说：“就代理商而言，当代理商开始提供一致的价值时，我们可能会为代理商提供不同的（货币化），无论是信用还是代币，还是基于消费的东西。但现在，我们真正专注于提供价值。
 
 
-During the Inbound conference, HubSpot also hosted an analyst day.
+During the Inbound conference, HubSpot also hosted an analyst day.  
+在 Inbound 会议期间，HubSpot 还举办了分析师日。
 
 
-Management raised its mid and long term operating margin targets. HubSpot now expects to achieve 20% to 22% non-GAAP operating margins by 2027, up from earlier guidance of 18% to 20% margins by 2026.
+Management raised its mid and long term operating margin targets. HubSpot now expects to achieve 20% to 22% non-GAAP operating margins by 2027, up from earlier guidance of 18% to 20% margins by 2026.  
+管理层提高了其中长期营业利润率目标。HubSpot 现在预计到 2027 年将实现 20% 至 22% 的非 GAAP 营业利润率，高于之前到 2026 年 18% 至 20% 的利润率指导。
 
 
-HubSpot Stock: Acquisition Strategy
------------------------------------
+HubSpot Stock: Acquisition StrategyHubSpot 股票：收购策略
+--------------------------------------------------
 
 
-Founded in 2006, HubSpot has made 17 acquisitions, with its most recent being Cacheflow. Cacheflow expanded HubSpot's capabilities in subscription billing management.
+Founded in 2006, HubSpot has made 17 acquisitions, with its most recent being Cacheflow. Cacheflow expanded HubSpot's capabilities in subscription billing management.  
+HubSpot 成立于 2006 年，已经进行了 17 次收购，最近的一次是 Cacheflow。Cacheflow 扩展了 HubSpot 在订阅计费管理方面的能力。
 
 
-Also, Boston-based HubSpot acquired business-to-business data provider Clearbit in late 2023. Clearbit had over 1,500 customers. AI-related acquisitions included Hustle and Mindstream.
+Also, Boston-based HubSpot acquired business-to-business data provider Clearbit in late 2023. Clearbit had over 1,500 customers. AI-related acquisitions included Hustle and Mindstream.  
+此外，总部位于波士顿的 HubSpot 于 2023 年底收购了企业对企业数据提供商 Clearbit。Clearbit 拥有超过 1,500 名客户。与 AI 相关的收购包括 Hustle 和 Mindstream。
 
 
-"I think our approach to M&A has remained consistent," Rangan said on the earnings call. "We take a very **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL))-esque approach to M&A. And the approach is to look for great technology, great talent that can accelerate our customer platform vision."
+"I think our approach to M&A has remained consistent," Rangan said on the earnings call. "We take a very **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL))-esque approach to M&A. And the approach is to look for great technology, great talent that can accelerate our customer platform vision."  
+“我认为我们的并购方法始终如一，”Rangan 在财报电话会议上表示。“我们采取非常像**苹果** （[AAPL）](https://research.investors.com/quote.aspx?symbol=AAPL) 式的并购方法。我们的方法是寻找出色的技术和优秀的人才，以加速我们的客户平台愿景。
 
 
-He added: "And we want to do that in a way where we do not disrupt the great customer experience that we offer. And so we've gotten very comfortable with executing this type of an M&A playbook. We look for great talent that can accelerate innovation in very specific parts of our platform."
+He added: "And we want to do that in a way where we do not disrupt the great customer experience that we offer. And so we've gotten very comfortable with executing this type of an M&A playbook. We look for great talent that can accelerate innovation in very specific parts of our platform."  
+他补充说：“我们希望以一种不会破坏我们提供的良好客户体验的方式做到这一点。因此，我们已经非常熟悉执行这种类型的并购手册。我们寻找能够加速我们平台非常特定部分创新的优秀人才。
 
 
-On an adjusted basis, HubSpot's September quarter earnings came in at $2.18 per share, up 37% from a year earlier. Revenue climbed 20% to $670 million. Analysts expected HubSpot earnings of $1.91 on sales of $647 million.
+On an adjusted basis, HubSpot's September quarter earnings came in at $2.18 per share, up 37% from a year earlier. Revenue climbed 20% to $670 million. Analysts expected HubSpot earnings of $1.91 on sales of $647 million.  
+在调整后的基础上，HubSpot 9 月季度收益为每股 2.18 美元，比一年前增长 37%。收入增长 20%，达到 6.7 亿美元。分析师预计 HubSpot 的销售额为 6.47 亿美元，收益为 1.91 美元。
 
 
-For the current quarter ending in December, HubSpot forecast earnings per share of $2.19 at the midpoint of its outlook and revenue of $673 million. Analysts had predicted adjusted earnings of $2.18 a share on revenue of $670 million.
+For the current quarter ending in December, HubSpot forecast earnings per share of $2.19 at the midpoint of its outlook and revenue of $673 million. Analysts had predicted adjusted earnings of $2.18 a share on revenue of $670 million.  
+对于截至 12 月的当前季度，HubSpot 预测每股收益为 2.19 美元（处于其展望的中点），收入为 6.73 亿美元。分析师此前预测调整后每股收益为 2.18 美元，营收为 6.7 亿美元。
 
 
-HubSpot Stock: Google Walks Away?
----------------------------------
+HubSpot Stock: Google Walks Away?HubSpot 股票：谷歌走开了？
+--------------------------------------------------
 
 
-Google-parent **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)) reportedly walked away from acquisition talks in early 2024.
+Google-parent **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)) reportedly walked away from acquisition talks in early 2024.  
+据报道，谷歌母公司 **Alphabet** （[GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)） 于 2024 年初退出了收购谈判。
 
 
-HubSpot's Relative Strength Rating is 87 out of a best-possible 99, according to IBD Stock Checkup. The best stocks tend to have an RS Rating of 80 or better.
+HubSpot's Relative Strength Rating is 87 out of a best-possible 99, according to IBD Stock Checkup. The best stocks tend to have an RS Rating of 80 or better.  
+HubSpot 的相对强度评级是 87 分（满分 99 分），根据 IBD Stock Checkup 的数据。最好的股票往往具有 80 或更高的 RS 评级。
 
 
-In addition, HubSpot stock has an Accumulation/Distribution Rating of A-plus. The rating analyzes price and volume changes in a stock over the past 13 weeks of trading. On an A+ to E scale, the rating measures institutional buying and selling in a stock.
+In addition, HubSpot stock has an Accumulation/Distribution Rating of A-plus. The rating analyzes price and volume changes in a stock over the past 13 weeks of trading. On an A+ to E scale, the rating measures institutional buying and selling in a stock.  
+此外，HubSpot 股票的累积/分配评级为 A-plus。该评级分析了股票在过去 13 周交易中的价格和成交量变化。在 A+ 到 E 的范围内，该评级衡量的是机构对股票的买卖。
 
 
-An A+ signifies heavy institutional buying; E means heavy selling. Think of the C grade as neutral.
+An A+ signifies heavy institutional buying; E means heavy selling. Think of the C grade as neutral.  
+A+ 表示机构大量购买;E 表示重卖。将 C 级视为中性。
 
 
-*Follow Reinhardt Krause on Twitter [@reinhardtk\_tech](https://twitter.com/reinhardtk_tech) for updates on artificial intelligence, cybersecurity and cloud computing.*
+*Follow Reinhardt Krause on Twitter [@reinhardtk\_tech](https://twitter.com/reinhardtk_tech) for updates on artificial intelligence, cybersecurity and cloud computing.  
+在 Twitter [@reinhardtk\_tech](https://twitter.com/reinhardtk_tech) 上关注 Reinhardt Krause，了解有关人工智能、网络安全和云计算的最新信息。*
 
 
-**YOU MAY ALSO LIKE:**
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Learn The Best Trading Rules At Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/)
+[Learn The Best Trading Rules At Investor's Corner  
+在 Investor's Corner 学习最佳交易规则](https://www.investors.com/category/how-to-invest/investors-corner/)
 
 
-[Want To Trade Options? Try Out These Strategies](https://www.investors.com/ibd-videos/videos/want-to-trade-options-here-are-the-basics-to-get-you-started)
+[Want To Trade Options? Try Out These Strategies  
+想要交易期权？试试这些策略](https://www.investors.com/ibd-videos/videos/want-to-trade-options-here-are-the-basics-to-get-you-started)
 
 
-[Monitor IBD's "Breaking Out Today" List For Companies Hitting New Buy Points](https://www.investors.com/ibd-indexes/ibd-breakout-stocks-index/)
+[Monitor IBD's "Breaking Out Today" List For Companies Hitting New Buy Points  
+监控 IBD 的“今日突破”名单，寻找达到新买入点的公司](https://www.investors.com/ibd-indexes/ibd-breakout-stocks-index/)
 
 
-[IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
+[IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today  
+IBD Digital：立即解锁 IBD 的优质股票列表、工具和分析](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
 
