--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-26.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-26.md
@@ -123,7 +123,7 @@ ERJ 股价本月迄今上涨了约 20%，在 2024 年飙升了近 118%。
 
 
 [Futures: Titans Fuel S&P 500 As Bitcoin Tumbles; Big Movers Late  
-期货：随着比特币暴跌，泰坦推动标准普尔 500 指数上涨;大搬家迟到](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-sp500-bitcoin-crowdstrike-earnings-movers/)
+期货：泰坦推动标准普尔 500 指数上涨，比特币暴跌;大搬家迟到](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-sp500-bitcoin-crowdstrike-earnings-movers/)
 
 
 
