--- a/_columns/The_Big_Picture/zh-cn/2024-11-25.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-25.md
@@ -91,7 +91,7 @@ Although oil and gas stocks lagged, offshore energy stock **Oceaneering** ([OII]
 
 
 Other notable breakouts included **Ceco Environmental** ([CECO](https://research.investors.com/quote.aspx?symbol=CECO)), which rallied past a 31.55 buy point amid a nine-day winning streak. The stock also has a [relative strength line](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/#:~:text=Simply%20put%2C%20the%20relative%20strength,with%20the%20Relative%20Strength%20Rating.) at a new high. In building products, **Azek** ([AZEK](https://research.investors.com/quote.aspx?symbol=AZEK)) gapped past a 50.78 buy point.  
-其他值得注意的突破包括 **Ceco Environmental** （[CECO），](https://research.investors.com/quote.aspx?symbol=CECO)在连续 9 天的上涨中反弹超过 31.55 的买入点。该股也有一条处于新高的[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/#:~:text=Simply%20put%2C%20the%20relative%20strength,with%20the%20Relative%20Strength%20Rating.)。在建筑产品方面，**Azek** （[AZEK）](https://research.investors.com/quote.aspx?symbol=AZEK) 跳空突破了 50.78 的买入点。
+其他值得注意的突破包括 **Ceco Environmental** （[CECO），](https://research.investors.com/quote.aspx?symbol=CECO)在连续 9 天的上涨中反弹超过 31.55 的买入点。该股也有一条处于新高的[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/#:~:text=Simply%20put%2C%20the%20relative%20strength,with%20the%20Relative%20Strength%20Rating.)。在建筑产品方面，**Azek** （[AZEK）](https://research.investors.com/quote.aspx?symbol=AZEK) 跳空突破 50.78 的买入点。
 
 
 Insurance provider **Fidelity National Financial** ([FNF](https://research.investors.com/quote.aspx?symbol=FNF)) rose into a buy zone from a 62.97 buy point.  
