--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-26.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-26.md
@@ -13,7 +13,7 @@ author: HARRISON MILLER
 
 
 Brazilian aerospace manufacturer Embraer is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) for Tuesday as shares surged to a 10-year high.  
-巴西航空航天制造商 Embraer 是周二的 [IBD 今日股票](https://www.investors.com/research/ibd-stock-of-the-day/)，因为股价飙升至 10 年高点。
+巴西航空航天制造商 Embraer 是周二的 [IBD 今日股票](https://www.investors.com/research/ibd-stock-of-the-day/)，股价飙升至 10 年高点。
 
 
 
@@ -123,7 +123,7 @@ ERJ 股价本月迄今上涨了约 20%，在 2024 年飙升了近 118%。
 
 
 [Futures: Titans Fuel S&P 500 As Bitcoin Tumbles; Big Movers Late  
-期货：泰坦推动标准普尔 500 指数上涨，比特币暴跌;大搬家迟到](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-sp500-bitcoin-crowdstrike-earnings-movers/)
+期货：随着比特币暴跌，泰坦推动标准普尔 500 指数上涨;大搬家迟到](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-sp500-bitcoin-crowdstrike-earnings-movers/)
 
 
 
